Updated HTML comments

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		</div>
 
 		<!-- Hero Section -->
-		<section id="hero" class="jumbotron jumbotron-fluid">
+		<section id="hero" class="jumbotron jumbotron-fluid"><!-- Adapted from course activity at tutor's instruction to fit the challenge criteria, as Bootstrap 5 no longer supports jumbotrons.-->
 			<div class="container body-container">
 				<div class="row">
 					<div class="col-lg-6 d-flex align-items-center justify-content-center">
