Testing dark mode preferences

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<div class="container body-container">
 				<div class="row">
 					<div class="col-lg-6 d-flex align-items-center justify-content-center">
-						<div class="image-wrapper position-relative" />
+						<div class="image-wrapper position-relative">
 						<img class="image-main img-fluid p-5" src="./assets/images/profile.png" alt="A line-drawing of a face." />
 						<img class="image-hover img-fluid p-5 position-absolute top-0 start-0" src="./assets/images/meanwhile.png"
 							alt="A line-drawing of two hands." />
